[gd_scene load_steps=9 format=3 uid="uid://dk7kubvxcd8in"]

[ext_resource type="Script" path="res://scenes/Levels/level_scripts/main1.gd" id="1_g5hir"]
[ext_resource type="Texture2D" uid="uid://iyyvn4is4n0l" path="res://sprites/phone_text_screen_yellow-export-export.png" id="3_h4s54"]
[ext_resource type="FontFile" uid="uid://d2x57q70kr1ns" path="res://sprites/Fonts/Retro Gaming.ttf" id="3_uec7n"]
[ext_resource type="Texture2D" uid="uid://bedr7utj2dvq7" path="res://sprites/grey_message.png" id="4_7gxov"]
[ext_resource type="Texture2D" uid="uid://fpwyy860kilu" path="res://sprites/blue_message.png" id="5_xjof4"]
[ext_resource type="Texture2D" uid="uid://lp0q8t2pmdal" path="res://sprites/image (1).png" id="6_f7g6m"]
[ext_resource type="AudioStream" uid="uid://cwj5e5qqjmb1u" path="res://sprites/Fonts/imsg_sound-[AudioTrimmer.com].mp3" id="7_sf5qq"]
[ext_resource type="AudioStream" uid="uid://dirvj6olmayw" path="res://sprites/Fonts/imsg_recieved.mp3" id="8_egpid"]

[node name="Level manager" type="Node2D"]
script = ExtResource("1_g5hir")

[node name="Camera2D" type="Camera2D" parent="."]
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.907
one_shot = true
autostart = true

[node name="Options" type="Marker2D" parent="."]
position = Vector2(-553, 158)

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 703.0
offset_top = 11.0
offset_right = 816.0
offset_bottom = 56.0
scale = Vector2(1, 1.01471)

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Continue_button" type="Button" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uec7n")
theme_override_font_sizes/font_size = 18
text = "Continue"

[node name="phone_imessage" type="Sprite2D" parent="."]
position = Vector2(300, 3)
scale = Vector2(0.595, 0.595)
texture = ExtResource("3_h4s54")

[node name="M1" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, -340)

[node name="ML2" type="Marker2D" parent="phone_imessage"]
position = Vector2(0, -280)
rotation = 1.5708

[node name="M2" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, -215)

[node name="M3" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, -155)

[node name="ML3" type="Marker2D" parent="phone_imessage"]
position = Vector2(0, -90)
rotation = 1.5708

[node name="M4" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, -30)

[node name="M5" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, 35)

[node name="ML4" type="Marker2D" parent="phone_imessage"]
position = Vector2(0, 100)
rotation = 1.5708

[node name="ML4_d" type="Marker2D" parent="phone_imessage"]
position = Vector2(-85, 100)
rotation = 1.5708
scale = Vector2(0.989672, 1)

[node name="M6" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, 160)

[node name="M7" type="Marker2D" parent="phone_imessage"]
position = Vector2(-252, 220)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="date" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = 242.0
offset_top = -190.0
offset_right = 364.0
offset_bottom = -167.0
theme_override_fonts/font = ExtResource("3_uec7n")
theme_override_font_sizes/font_size = 10
text = "02/18/2022 1:48 PM"

[node name="A1_1" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1153.0
offset_top = -14.0
offset_right = 1312.0
offset_bottom = 37.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_1"]
texture_filter = 1
layout_mode = 0
offset_left = 41.3907
offset_top = 7.78277
offset_right = 77.3907
offset_bottom = 30.7828
scale = Vector2(2.07842, 1.74355)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Hey :]"

[node name="L1_1a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1424.0
offset_top = 34.0
offset_right = 1583.0
offset_bottom = 85.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_1a"]
texture_filter = 1
layout_mode = 0
offset_left = 63.2589
offset_top = 9.41228
offset_right = 95.2589
offset_bottom = 32.4123
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Hey!"

[node name="L1_1b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1325.0
offset_top = 131.0
offset_right = 1484.0
offset_bottom = 182.0
scale = Vector2(1.01106, 0.672189)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_1b"]
texture_filter = 1
layout_mode = 0
offset_left = 21.7509
offset_top = 9.97694
offset_right = 187.751
offset_bottom = 31.9769
scale = Vector2(0.932463, 1.60575)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Stranger Danger....."

[node name="L1_1c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1596.0
offset_top = 33.0
offset_right = 1755.0
offset_bottom = 84.0
scale = Vector2(0.981397, 0.603036)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_1c"]
texture_filter = 1
layout_mode = 0
offset_left = 63.1898
offset_top = 5.42128
offset_right = 94.1898
offset_bottom = 28.4213
scale = Vector2(1.02264, 1.79713)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Sup."

[node name="L1_1d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1335.0
offset_top = 84.0
offset_right = 1494.0
offset_bottom = 135.0
scale = Vector2(1.02025, 0.713101)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_1d"]
texture_filter = 1
layout_mode = 0
offset_left = 23.5084
offset_top = 11.672
offset_right = 148.508
offset_bottom = 34.672
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Who are you again?"

[node name="A1_2z" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1233.0
offset_top = -12.0
offset_right = 1392.0
offset_bottom = 39.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_2z"]
texture_filter = 1
layout_mode = 0
offset_left = 41.3907
offset_top = 7.78277
offset_right = 77.3907
offset_bottom = 30.7828
scale = Vector2(2.07842, 1.74355)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "uhhh"

[node name="A1_2a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1155.0
offset_top = 38.0
offset_right = 1364.0
offset_bottom = 89.0
scale = Vector2(1.17253, 0.699903)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 79
patch_margin_top = 25
patch_margin_right = 87
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_2a"]
texture_filter = 1
layout_mode = 0
offset_left = 12.178
offset_top = 11.3146
offset_right = 267.178
offset_bottom = 34.3146
scale = Vector2(0.734084, 1.41756)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Are you going to the Asian night market?"

[node name="A1_2b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1158.0
offset_top = 83.0
offset_right = 1323.0
offset_bottom = 134.0
scale = Vector2(1.02025, 0.728441)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_2b"]
texture_filter = 1
layout_mode = 0
offset_left = 14.7023
offset_top = 10.9824
offset_right = 180.702
offset_bottom = 33.9824
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Evans brother, Anekin?"

[node name="A1_2c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1158.0
offset_top = 131.0
offset_right = 1317.0
offset_bottom = 182.0
scale = Vector2(1.02025, 0.728441)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_2c"]
texture_filter = 1
layout_mode = 0
offset_left = 20.5832
offset_top = 11.266
offset_right = 153.583
offset_bottom = 34.266
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Not a stranger but k."

[node name="L1_2a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1503.0
offset_top = 181.0
offset_right = 1662.0
offset_bottom = 232.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2a"]
texture_filter = 1
layout_mode = 0
offset_left = 63.2589
offset_top = 9.41228
offset_right = 95.2589
offset_bottom = 32.4123
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Yeah"

[node name="L1_2b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1346.0
offset_top = 233.0
offset_right = 1505.0
offset_bottom = 284.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2b"]
texture_filter = 1
layout_mode = 0
offset_left = 56.339
offset_top = 9.41223
offset_right = 113.339
offset_bottom = 32.4122
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Maybe..."

[node name="L1_2c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1674.0
offset_top = 182.0
offset_right = 1833.0
offset_bottom = 233.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2c"]
texture_filter = 1
layout_mode = 0
offset_left = 56.339
offset_top = 7.90341
offset_right = 113.339
offset_bottom = 30.9034
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Yes why?"

[node name="L1_2d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1304.0
offset_top = 279.0
offset_right = 1463.0
offset_bottom = 330.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_2d"]
texture_filter = 1
layout_mode = 0
offset_left = 15.8081
offset_top = 9.41223
offset_right = 156.808
offset_bottom = 32.4122
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Why cause im asian???"

[node name="A1_3a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1156.0
offset_top = 184.0
offset_right = 1331.0
offset_bottom = 235.0
scale = Vector2(1.02025, 0.728441)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_3a"]
texture_filter = 1
layout_mode = 0
offset_left = 14.7023
offset_top = 10.9824
offset_right = 180.702
offset_bottom = 33.9824
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "nice, Im going with danny"

[node name="A1_3c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1338.0
offset_top = 183.0
offset_right = 1497.0
offset_bottom = 234.0
scale = Vector2(0.891879, 0.638189)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_3c"]
texture_filter = 1
layout_mode = 0
offset_left = 22.4245
offset_top = 8.8099
offset_right = 147.425
offset_bottom = 31.8099
scale = Vector2(0.965925, 1.5882)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "maybe I'll c u there"

[node name="A1_3b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1159.0
offset_top = 232.0
offset_right = 1341.0
offset_bottom = 283.0
scale = Vector2(1.00187, 0.74932)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_3b"]
texture_filter = 1
layout_mode = 0
offset_left = 14.7023
offset_top = 10.9824
offset_right = 180.702
offset_bottom = 33.9824
scale = Vector2(0.922703, 1.40592)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "ok well maybe I'll c u there"

[node name="A1_q" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1314.0
offset_top = -13.0
offset_right = 1473.0
offset_bottom = 38.0
scale = Vector2(0.399466, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_q"]
texture_filter = 1
layout_mode = 0
offset_left = 69.7106
offset_top = 9.38804
offset_right = 76.7106
offset_bottom = 27.388
scale = Vector2(2.36781, 1.65224)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "?"

[node name="A1_3d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1166.0
offset_top = 280.0
offset_right = 1425.0
offset_bottom = 331.0
scale = Vector2(0.4751, 0.650215)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_3d"]
texture_filter = 1
layout_mode = 0
offset_left = 41.3907
offset_top = 7.78277
offset_right = 77.3907
offset_bottom = 30.7828
scale = Vector2(2.07842, 1.74355)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "what?? no lol?"

[node name="L1_3a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1307.0
offset_top = 341.0
offset_right = 1466.0
offset_bottom = 392.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_3a"]
texture_filter = 1
layout_mode = 0
offset_left = 29.6479
offset_top = 7.90341
offset_right = 142.648
offset_bottom = 30.9034
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Yeah ill be there :)"

[node name="L1_3b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1309.0
offset_top = 389.0
offset_right = 1468.0
offset_bottom = 440.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_3b"]
texture_filter = 1
layout_mode = 0
offset_left = 63.2589
offset_top = 9.41228
offset_right = 95.2589
offset_bottom = 32.4123
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "ew."

[node name="L1_3c" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1474.0
offset_top = 342.0
offset_right = 1633.0
offset_bottom = 393.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_3c"]
texture_filter = 1
layout_mode = 0
offset_left = 67.2131
offset_top = 7.90345
offset_right = 99.2131
offset_bottom = 30.9035
scale = Vector2(1.4764, 2.28679)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "👍"

[node name="L1_3d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1316.0
offset_top = 437.0
offset_right = 1527.0
offset_bottom = 488.0
scale = Vector2(1.01157, 0.662768)
pivot_offset = Vector2(-0.769058, 49.7043)
texture = ExtResource("5_xjof4")
region_rect = Rect2(4, 10, 171, 81)
patch_margin_left = 78
patch_margin_top = 25
patch_margin_right = 79
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/L1_3d"]
texture_filter = 1
layout_mode = 0
offset_left = 9.87673
offset_top = 9.41228
offset_right = 217.877
offset_bottom = 32.4123
scale = Vector2(0.922703, 1.54433)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "Are you asking me out on a date?"

[node name="A1_4a" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1168.0
offset_top = 333.0
offset_right = 1327.0
offset_bottom = 384.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_4a"]
texture_filter = 1
layout_mode = 0
offset_left = 37.0338
offset_top = 7.78277
offset_right = 75.0338
offset_bottom = 30.7828
scale = Vector2(2.276, 1.63059)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "coolio"

[node name="A1_4b" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1165.0
offset_top = 387.0
offset_right = 1324.0
offset_bottom = 438.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_4b"]
texture_filter = 1
layout_mode = 0
offset_left = 54.4615
offset_top = 7.78277
offset_right = 92.4615
offset_bottom = 30.7828
scale = Vector2(2.276, 1.63059)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "...k"

[node name="A1_4d" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1170.0
offset_top = 436.0
offset_right = 1484.0
offset_bottom = 487.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_4d"]
texture_filter = 1
layout_mode = 0
offset_left = 21.7846
offset_top = 9.38803
offset_right = 150.785
offset_bottom = 32.388
scale = Vector2(2.09333, 1.43718)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "if you want it to be ;)"

[node name="A1_jk" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 1170.0
offset_top = 476.0
offset_right = 1329.0
offset_bottom = 527.0
scale = Vector2(0.45904, 0.622948)
pivot_offset = Vector2(0, 50.7934)
texture = ExtResource("4_7gxov")
region_rect = Rect2(26, 21, 171, 82)
patch_margin_left = 75
patch_margin_top = 25
patch_margin_right = 84
patch_margin_bottom = 26

[node name="Label" type="Label" parent="Control/A1_jk"]
texture_filter = 1
layout_mode = 0
offset_left = 21.7846
offset_top = 6.17751
offset_right = 75.7846
offset_bottom = 29.1775
scale = Vector2(2.276, 1.63059)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 13
text = "jk haha.."

[node name="BG" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(8, -40)
texture = ExtResource("6_f7g6m")
metadata/_edit_lock_ = true

[node name="msg_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_sf5qq")
volume_db = 3.104
panning_strength = 0.0

[node name="msg_recieved" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_egpid")
volume_db = -6.209

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
